--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
 			width: 18vw;
 			height: 100vh;
 			background-color: #1f1e1e;
-			z-index:100;
+			z-index:60;
 		}
-		#timeline_control {
-			position:fixed;
-			width: 88vw;
-			height: 10vh;
-			background-color: #1f1e1e;
-			z-index:99;
-			right: 0;
-			bottom: 0;
-		}
+        #timeline_control {
+            position: fixed;
+            width: 82vw;
+            height: 10vh;
+            background-color: #1f1e1e;
+            z-index: 99;
+            right: 0;
+            bottom: 0;
+            display: flex;
+        }
 		h1 {
 			font-family: system-ui;
 			color: white;
@@ -139,13 +140,78 @@
 			border-radius: 5px;
 			font-size: 12px;
 			opacity: 0.6;
-			z-index: 100;
+			z-index: 200;
 			user-select: none;
 			-webkit-user-select: none; /* Safari */        
 			-moz-user-select: none; /* Firefox */
 			-ms-user-select: none; /* IE10+/Edge */
 			font-family: system-ui;
 		}
+
+		/* slider */
+
+        .slider-container {
+            position: relative;
+            width: 70%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        .slider {
+            -webkit-appearance: none;
+            width: 102%;
+            height: 15px;
+            left: -5px;
+            border-radius: 5px;
+            background: transparent;
+            position: absolute;
+            z-index: 2;
+        }
+
+            .slider::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                width: 25px;
+                height: 25px;
+                border-radius: 50%;
+                background: #333;
+                cursor: pointer;
+                z-index: 3;
+                position: relative;
+            }
+
+            .slider::-moz-range-thumb {
+                width: 25px;
+                height: 25px;
+                border-radius: 50%;
+                background: #333;
+                cursor: pointer;
+            }
+
+        .track {
+            position: absolute;
+            width: 100%;
+            height: 15px;
+            border-radius: 5px;
+            background: lightgray;
+            z-index: 0;
+        }
+
+        .fill-left {
+            position: absolute;
+            height: 15px;
+            background: #83c8f2;
+            border-radius: 5px 0 0 5px;
+            z-index: 2;
+        }
+
+        .unavailable-rectangle {
+            position: absolute;
+            height: 15px;
+            background: #919191;
+            border-radius: 0 5px 5px 0;
+            z-index: 1;
+        }
 
 		
     </style>
@@ -168,7 +234,12 @@
 		
 	</div>
 	<div id="timeline_control">
-
+		<div class="slider-container">
+			<div class="track"></div>
+			<div class="fill-left"></div>
+			<div class="unavailable-rectangle"></div>
+			<input type="range" min="0" max="48" value="0" class="slider" id="range-slider">
+		</div>
 	</div>
 	<div id="container">
 		<!-- Inner container that holds all images -->
@@ -181,7 +252,6 @@
 
 		</div>
 	</div>
-
 
 	<script src="canvasGenerator.js"></script>
 	<script src="imageContainer.js"></script>
