--- a/HRRRmenu.html
+++ b/HRRRmenu.html
@@ -10,10 +10,15 @@
       <span class="arrow">›</span>
     </div>
     <div id="surface" class="nested-dropdown-content">
-        <a href="javascript:(function(){updateUrlVariable('variable', 'CAPE');})()" title="">CAPE</a>
-        <a href="javascript:(function(){updateUrlVariable('variable', 'CIN');})()" title="">CIN</a>
-        <a href="javascript:(function(){updateUrlVariable('variable', 'SBT124');})()" title="">Satellite IR Simulation</a>
-        <a href="javascript:(function(){updateUrlVariable('variable', 'REFC');})()" title="">Composite Reflectivity</a>
+        <a href="javascript:(function(){updateUrlVariable('variable', 'CAPE');updateUrlVariable('level', 'lev_surface');reloadImagesPrepare()})()" title="">CAPE at Surface</a>
+        <a href="javascript:(function(){updateUrlVariable('variable', 'CIN');updateUrlVariable('level', 'lev_surface');reloadImagesPrepare()})()" title="">CIN</a>
+		<a href="javascript:(function(){updateUrlVariable('variable', 'DPT');updateUrlVariable('level', 'lev_2_m_above_ground');reloadImagesPrepare()})()" title="">Dew Point Temperature at 2m</a>
+		<a href="javascript:(function(){updateUrlVariable('variable', 'TMP');updateUrlVariable('level', 'lev_2_m_above_ground');reloadImagesPrepare()})()" title="">Temperature at 2m</a>
+        <a href="javascript:(function(){updateUrlVariable('variable', 'SBT124');updateUrlVariable('level', 'lev_top_of_atmosphere');reloadImagesPrepare()})()" title="">Satellite IR Simulation</a>
+        <a href="javascript:(function(){updateUrlVariable('variable', 'REFC');updateUrlVariable('level', 'lev_entire_atmosphere');reloadImagesPrepare()})()" title="">Composite Reflectivity</a>
+		<a href="javascript:(function(){updateUrlVariable('variable', 'HAIL');updateUrlVariable('level', 'lev_0.1_sigma_level');reloadImagesPrepare()})()" title="">Hail at Surface</a>
+		<a href="javascript:(function(){updateUrlVariable('variable', 'RETOP');updateUrlVariable('level', 'lev_cloud_top');reloadImagesPrepare()})()" title="">Echo Tops</a>
+		
     </div>
 
   </div>
