Fix javascript injections and added HRRRSH

--- a/dropdownmenu.html
+++ b/dropdownmenu.html
@@ -15,10 +15,10 @@
         <span class="arrow">›</span>
       </div>
       <div id="highResolution" class="nested-dropdown-content">
-        <a href="javascript:(function(){updateUrlVariable('model', 'HRDPS');})()" title="High Resolution Deterministic Prediction System">HRDPS</a>
-        <a href="javascript:(function(){updateUrlVariable('model', 'HRRR');})()" title="High Resolution Rapid Refresh (3km)">HRRR</a>
-        <a href="javascript:(function(){updateUrlVariable('model', 'HRRRSH');})()" title="HRRR Sub Hourly (3km)">HRRRSH</a>
-        <a href="javascript:(function(){updateUrlVariable('model', 'NAMNEST');})()" title="North American Mesoscale High Resolution (3km)">NAM NEST</a>
+        <a href="javascript:(function(){updateUrlVariable('model', 'HRDPS');reloadImagesPrepare();})()" title="High Resolution Deterministic Prediction System">HRDPS</a>
+        <a href="javascript:(function(){updateUrlVariable('model', 'HRRR');reloadImagesPrepare();})()" title="High Resolution Rapid Refresh (3km)">HRRR</a>
+        <a href="javascript:(function(){updateUrlVariable('model', 'HRRRSH');reloadImagesPrepare();})()" title="HRRR Sub Hourly (3km)">HRRRSH</a>
+        <a href="javascript:(function(){updateUrlVariable('model', 'NAMNEST');reloadImagesPrepare();})()" title="North American Mesoscale High Resolution (3km)">NAM NEST</a>
       </div>
       <div class="expandable" onclick="toggleDropdown('globalModels')">
         <span>Global Models</span>
